# android-profile-tracing

./: .gitmodules  LICENSE  README.md
dependencies/: Makefile  Notes.md  README.md  acvtool.patch  apkeep_2f4a159.patch  droidbot.patch  fastbot.patch
experiments/: Makefile  Makefile.variable  top400apps.txt
experiments/2024-05/code_coverage/acvtool/_analysis/: 00_plots-acvtool.ipynb
experiments/2024-05/code_coverage/acvtool/baseline/: Makefile  runacvtool-baseline.sh
experiments/2024-05/code_coverage/acvtool/droidbot/: Makefile  runacvtool-droidbot.sh
experiments/2024-05/code_coverage/acvtool/monkey/: Makefile  acvtool  runacvtool-monkey.sh
experiments/2024-05/profile_coverage/_analysis/: 00_plot.ipynb
experiments/2024-05/profile_coverage/baseline/: Makefile
experiments/2024-05/profile_coverage/droidbot/: Makefile
experiments/2024-05/profile_coverage/monkey/: Makefile
experiments/2024-10/: Makefile  Makefile.variable  Notes.md
experiments/2024-10/acvtool/: Makefile.variable  apps-that-dont-crash.csv
experiments/2024-10/acvtool/droidbot/: Makefile  runacvtool-droidbot.sh
experiments/2024-10/acvtool/fastbot/: .python-version  Makefile  runacvtool-fastbot.sh
experiments/2024-10/acvtool/monkey/: Makefile  runacvtool-monkey.sh
experiments/2024-10/acvtool/time/: Makefile  acvtool  runacvtool-time.sh
experiments/2024-10/analysis/: README.md  collect_data.py  requirements.txt  visualize.ipynb
experiments/2024-10/download/: .gitignore  Makefile  download.py
experiments/2024-10/profcov/: Makefile  lost_events.txt  num_methods.csv  processed_envents.txt
experiments/2024-10/profcov/droidbot/: Makefile
experiments/2024-10/profcov/fastbot/: Makefile
experiments/2024-10/profcov/monkey/: Makefile
experiments/2024-10/profcov/time/: Makefile
experiments/analysis/dynamic/: .gitignore  01_visualize.ipynb  collect_data.py  samples_to_dynamic_test.csv  samples_to_dynamic_test_only_acvtool.csv
experiments/analysis/static/: .gitignore  01_prepare_sample_data.ipynb  01a_data_summary.ipynb  02_plot_sample_data.ipynb  03_distribution_hot_start_post.ipynb  04_numbers_for_tex.ipynb  05_plot_change_exploration.ipynb  analysishelper.py  cachedefs.py
experiments/daily_apk_dm_scrape/: Makefile  Notes.md  cronwrapper.sh  harvest.py
experiments/download/01_select_apps/: Database.py  Readme.md  gexplorer.py
experiments/download/02_daily-profile-download/: README.md  apps.csv  device.properties  download.sh
experiments/dynamic/: .gitignore  timestats.py  timestats.txt
experiments/dynamic/acvtool/: .gitignore  Makefile.variable
experiments/dynamic/acvtool/droidbot/: Makefile  runacvtool-droidbot.sh
experiments/dynamic/acvtool/fastbot/: Makefile  runacvtool-fastbot.sh
experiments/dynamic/acvtool/monkey/: Makefile  runacvtool-monkey.sh
experiments/dynamic/acvtool/time/: Makefile  runacvtool-time.sh
experiments/dynamic/preliminary_acvtool/: .gitignore  Makefile  Makefile.variable  Notes.md  acvtool  runacvtool-time.sh
experiments/dynamic/preliminary_profcov/: .gitignore  Makefile  input.csv  list_apps_working_tracer_time
experiments/dynamic/profcov/: Makefile
experiments/dynamic/profcov/droidbot/: Makefile
experiments/dynamic/profcov/fastbot/: Makefile
experiments/dynamic/profcov/monkey/: Makefile
experiments/dynamic/profcov/time/: Makefile
experiments/org.thoughtcrime.securesms/org.thoughtcrime.securesms/: .gitignore  Makefile  Notes.md  Untitled.ipynb  cloud.profdump  explore.ipynb  libs.txt
experiments/scrape_charts/: .gitignore  Notes.md  allStages.sh  top400FreeApps_12_Mar_2024.txt
experiments/scrape_charts/src/: stage0_prepare.py  stage1_charts.js  stage2_collect.py  stage3_fullDetails.js  stage4_fix.sh  stage5_zip.sh  stage6_copy.sh  stage7_apps.sh  stage7_apps_parallel.sh
src/adbdevice/: LICENSE.txt  README.md  noxfile.py  pyproject.toml
src/adbdevice/src/adbdevice/: __init__.py  adbdevice.py  emulatorctrl.py  tracer.py
src/adbdevice/tests/: __init__.py  test_basic.py
src/aproftracer/: .gitignore  Notes.md  README.md  pyproject.toml
src/aproftracer/src/aproftracer/: aproftracer.py
